--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main id="main">
       <h1 id="title">
         <span id="timer">Loading...</span>
-      </h1>
+      <h1>Ultimate Timer - Frontend Deployed!</h1>
     </main>
   </div>
 
